<resources>
    <string name="app_name">Remember</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_new_reminder">New Reminder</string>
    <string name="title_activity_new_category">New Category</string>
    <string name="title_activity_details">Details</string>

    <!-- Labels -->
    <string name="category_label">Select Category</string>
    <string name="new_category_label">New Category</string>

    <string name="important_msg">Important reminders are shown under each category</string>
    <string name="important">Important reminder</string>

    <!-- Hints -->
    <string name="title_hint">Title</string>
    <string name="date_hint">Time and date</string>
    <string name="list_hint">List</string>
    <string name="birthday_hint">Birthday</string>
    <string name="name_hint">Name</string>
    <string name="list_add_hint">Add item to list</string>
    <string name="desc_hint">Description</string>
    <string name="phone_hint">Phone Number</string>
    <string name="movie_hint">Image (i.e. movie ticket)</string>
    <string name="new_cat_hint">New category</string>

    <!-- Menu Buttons -->
    <string name="menu_new_category">New Category</string>
    <string name="menu_new_reminder">Add Reminder</string>
    <string name="menu_home">Home</string>
    <string name="menu_clear">Clear history</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_save">Save</string>
    <string name="menu_history">Reminder history</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_off">Close app</string>

    <!-- Buttons -->
    <string name="bg_color_button">Background color</string>
    <string name="icon_color_button">Icon color</string>
    <string name="add_button">Add</string>
    <string name="call_button">Call number</string>
    <string name="gallery_button">Open gallery</string>

    <string-array name="date_spinner">
        <item>All</item>
        <item>Today</item>
        <item>Tomorrow</item>
        <item>This week</item>
        <item>Next week</item>
        <item>This month</item>
        <item>Next month</item>
        <item>This year</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_date_format">Date format</string>
    <string-array name="pref_date_format_list_titles">
        <item>31.12.2016 23:59</item>
        <item>12.31.2016 23:59</item>
        <item>December 31. 2016, 23:59</item>
    </string-array>
    <string-array name="pref_date_format_list_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
